syntax = "proto3";

package elevator;

service Elevator {
  rpc CreateSymlink (SymlinkRequest) returns (SymlinkReply);

  rpc ShutdownTool (ShutdownRequest) returns (ShutdownResponse);
}

message SymlinkRequest {
  string target = 1;
  string symlink = 2;
}

message SymlinkReply {}

message ShutdownRequest {}

message ShutdownResponse {}
